@@ -1,6 +1,9 @@
 Revision history for Acme-CPANAuthors-British
 
         - added LICENSE file.
+        - added new Authors: ABABLABAB, DCHESTER, EDWARDSON, GEOFFR, GHARPER
+          and HOUSTON.
+        - added new Companies: INTERINFO and RECKON.
 
 0.20    2013-12-08
         - added BRIANG and WDH.
